# aigent

./: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  blog_ai_agent.md
text_to_video_agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
text_to_video_agent/examples/: multi_scene_example.py  scenes_example.json  simple_example.py  test_image_to_video.py  test_merge_audio_video.py  test_text_to_audio.py  test_text_to_image.py  thirty_seconds_example.py
text_to_video_agent/src/: __init__.py  poe_client.py  text_to_video_agent.py  video_processor.py
text_to_video_agent/tests/: test_video_processor.py
